# petstore-openapi-client-pydantic

./: .gitignore  .openapi-generator-ignore  404.html  Makefile  README.md  git_push.sh  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  test-requirements.txt  tox.ini
.github/prompts/: plan-implementApiTests.prompt.md
.github/workflows/: docs.yml  python.yml  release.yml
.openapi-generator/: FILES
docs/: Category.md  HTTPValidationError.md  HealthApi.md  HealthDetails.md  HealthResponse.md  LocationInner.md  Order.md  OrderCreate.md  OrderStatus.md  Pet.md  PetApi.md  PetCreate.md  PetStatus.md  PetUpdate.md  StoreApi.md  Tag.md  User.md  UserApi.md  UserCreate.md  UserUpdate.md  ValidationError.md  sample.py
docs/Category/: index.html
docs/HTTPValidationError/: index.html
docs/HealthApi/: index.html
docs/HealthDetails/: index.html
docs/HealthResponse/: index.html
docs/LocationInner/: index.html
docs/Order/: index.html
docs/OrderCreate/: index.html
docs/OrderStatus/: index.html
docs/Pet/: index.html
docs/PetApi/: index.html
docs/PetCreate/: index.html
docs/PetStatus/: index.html
docs/PetUpdate/: index.html
docs/StoreApi/: index.html
docs/Tag/: index.html
docs/User/: index.html
docs/UserApi/: index.html
docs/UserCreate/: index.html
docs/UserUpdate/: index.html
docs/ValidationError/: index.html
openapi/: config.json  openapi.json
openapi/templates/: README.mustache  api.mustache  api_client.mustache  api_doc_example.mustache  api_test.mustache  assertions.mustache  common_README.mustache  configuration.mustache  conftest.mustache  conftest.py  github-workflow.mustache  logging_utils.mustache  model_anyof.mustache  model_generic.mustache  model_oneof.mustache  model_test.mustache  openapi-generator-ignore.mustache  partial_header.mustache  pyproject.mustache  python_doc_auth_partial.mustache  requirements.mustache  test-requirements.mustache
openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
openapi_client/api/: __init__.py  health_api.py  pet_api.py  store_api.py  user_api.py
openapi_client/models/: __init__.py  category.py  http_validation_error.py  location_inner.py  order.py  order_create.py  order_status.py  (+9 more)
petstore_openapi_client/: __init__.py  api_client.py  assertions.py  configuration.py  exceptions.py  logging_utils.py  rest.py
scripts/: postprocess_pydantic_v2.py
search/: search_index.json
test/: conftest.py  test_category.py  test_health_api.py  test_health_details.py  test_health_response.py  test_http_validation_error.py  test_location_inner.py  test_order.py  test_order_create.py  test_order_status.py  test_pet.py  test_pet_api.py  test_pet_create.py  test_pet_status.py  test_pet_update.py  test_store_api.py  test_tag.py  test_user.py  test_user_api.py  test_user_create.py  test_user_update.py  test_validation_error.py
(+24 files in other folders)
