[tool.poetry]
name = "openapi_client"
version = "0.0.0"
description = "Petstore API"
authors = ["Ramon Alcantara Arceo <ramalc.ms@outlook.com>"]
license = "Unlicense"
readme = "README.md"
repository = "https://github.com/RamonAlcantaraArceo/petstore-openapi-client-pydantic"
keywords = ["OpenAPI", "OpenAPI-Generator", "Petstore API"]
include = ["openapi_client/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
aiohttp = ">= 3.8.4"
pydantic = "^1.10.5, <2"
aenum = ">=3.1.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.1"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
