[project]
name = "petstore-openapi-client-pydantic"
version = "0.0.0"
description = "Petstore API"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Ramon Alcantara Arceo", email = "ramalc.ms@outlook.com" }]
license = "Unlicense"
keywords = ["OpenAPI", "OpenAPI-Generator", "Petstore API"]
dependencies = [
	"python-dateutil>=2.9.0",
	"aiohttp>=3.10.0",
	"pydantic>=2.0.0,<3",
	"aenum>=3.1.17",
]

[project.urls]
Repository = "https://github.com/RamonAlcantaraArceo/petstore-openapi-client-pydantic"

[project.optional-dependencies]
dev = [
	"pytest>=8.3.0",
	"pytest-cov>=6.0.0",
	"pytest-randomly>=3.15.0",
	"pytest-asyncio>=0.24.0",
	"tox>=4.14.0",
	"ruff>=0.15.13",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = false
packages = ["petstore_openapi_client"]

[tool.setuptools.package-data]
petstore_openapi_client = ["py.typed"]

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
